# LabfolderPy

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
labfolder/: labfolder_config.py
labfolder/classes/: data_elements.py  entries.py  labfolder_access.py
